# Algoritmi_Vaja1

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
.github/workflows/: 28588_deploy.yml  28588_test.yml
src/: main.cpp  sorting.cpp  sorting.hpp
tests/: input.txt  test_sort.cpp
